--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,15 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
+
+
 
     <!-- add javadoc and sources into built artifact, so the library can be debugged-->
     <build>
