--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>eu.kartoffelquadrat</groupId>
     <artifactId>asyncrestlib</artifactId>
     <packaging>jar</packaging>
-    <version>1.5.1-SNAPSHOT</version>
+    <version>1.5.1</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>A Spring Boot extension for asynchronous HTTP/REST callbacks</description>
     <url>https://github.com/kartoffelquadrat/AsyncRestLib</url>
